bk_ida/gccida/c3/concat_loc_descriptor
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/concat_loc_descriptor/src/dwarf2out.c:8388:4: error: expected ';' after expression
rtx v12; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/concat_loc_descriptor/src/dwarf2out.c:8388:5: error: use of undeclared identifier 'v12'
rtx v12; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/concat_loc_descriptor/src/dwarf2out.c:8453:1: error: use of undeclared identifier 'v12'
v12 = x1; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/concat_loc_descriptor/src/dwarf2out.c:8459:1: error: use of undeclared identifier 'v12'
v12 = x1->fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/concat_loc_descriptor/src/dwarf2out.c:8461:7: error: use of undeclared identifier 'v12'
v13 = v12->fld[0].rtuint; 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/concat_loc_descriptor/src/dwarf2out.c:8533:54: error: expected expression
v15 = concat_loc_descriptor( x1->fld[0].rtx, *( rtx *)&x1[1]); 
                                                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/concat_loc_descriptor/src/dwarf2out.c:8536:45: error: use of undeclared identifier 'machine_mode'
v15 = mem_loc_descriptor( x1->fld[0].rtx, ( machine_mode)BYTE2( v5)); 
                                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/concat_loc_descriptor/src/dwarf2out.c:8547:53: error: expected expression
v7 = concat_loc_descriptor( x0->fld[0].rtx, *( rtx *)&x0[1]); 
                                                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/concat_loc_descriptor/src/dwarf2out.c:8550:44: error: use of undeclared identifier 'machine_mode'
v7 = mem_loc_descriptor( x0->fld[0].rtx, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x0)); 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/concat_loc_descriptor/src/dwarf2out.c:8550:59: error: expected expression
v7 = mem_loc_descriptor( x0->fld[0].rtx, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x0)); 
                                                          ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/concat_loc_descriptor/src/obj/dwarf2out.o] Error 1
